--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,24 +1,24 @@
 .lead__image {
     max-width: 984px;
     max-height: 615px;
-    margin: 0;
+    margin: 0 auto 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1120px) {
     .lead__image {
         max-width: 928px;
         max-height: 580px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
     .lead__image {
         max-width: 768px;
         max-height: 480px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 540px) {
     .lead__image {
         max-width: 320px;
         max-height: 200px;
