--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -6,6 +6,7 @@
     max-width: 460px;
     margin: 0 40px 48px 0;
     grid-area: title;
+    font-family: 'Inter';
 }
 
 @media screen and (max-width: 1120px) {
@@ -24,7 +25,7 @@
     }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 600px) {
     .places__title {
         max-width: 288px;
         margin: 0 0 32px 16px;
