--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -14,7 +14,7 @@
     content: "";
     width: 100%;
     height: 100%;
-    background: black;
+    background: #2A2C2F;
     position: absolute;
     opacity: 0.3;
     transition: .3s;
