--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,6 +6,7 @@
     max-width: 560px;
     text-align: center;
     margin: 0 auto 32px;
+    font-family: 'Inter';
 }
 
 @media screen and (max-width: 540px) {
