--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,26 +1,26 @@
 .cover {
     max-width: 1184px;
-    max-height: 740px;
+    min-height: 740px;
     margin: 0 auto;
 }
 
 @media screen and (max-width: 1120px) {
     .cover {
         max-width: 1024px;
-        max-height: 640px;
+        min-height: 640px;
     }
 }
 
 @media screen and (max-width: 960px) {
     .cover {
         max-width: 768px;
-        max-height: 480px;
+        min-height: 480px;
     }
 }
 
 @media screen and (max-width: 540px) {
     .cover {
         max-width: 320px;
-        max-height: 200px;
+        min-height: 200px;
     }
 }
