--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,6 +4,7 @@
     font-size: 14px;
     line-height: 16px;
     text-align: right;
+    font-family: 'Inter';
 }
 
 @media screen and (max-width: 540px) {
