--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,12 @@
     font-size: 16px;
     line-height: 18px;
     margin: 0 18px 0 0;
+    font-family: 'Inter';
+}
+
+.footer__link:hover {
+    transition-duration: 1s;
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 540px) {
