--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,6 +6,7 @@
     line-height: 28px;
     margin-right: 18px;
     text-decoration: none;
+    font-family: 'Inter';
 }
 
 .header__lang-link:last-of-type {
@@ -14,6 +15,11 @@
 
 .header__lang-link:focus {
     text-decoration: underline;
+}
+
+.header__lang-link:hover {
+    transition-duration: 1s;
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 540px) {
