--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,6 +7,7 @@
     text-align: center;
     max-width: 640px;
     margin: 0 auto 64px;
+    font-family: 'Inter';
 }
 
 @media screen and (max-width: 1120px) {
