--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,9 +4,10 @@
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
     padding: 0 48px 0;
+    justify-content: center;
 }
 
-@media screen and (max-width: 1120px) {
+@media screen and (max-width: 1240px) {
     .photo-grid {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 1fr);
@@ -22,7 +23,7 @@
     }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 740px) {
     .photo-grid {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(12, 1fr);
