--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -5,6 +5,7 @@
     color: white;
     max-width: 484px;
     margin: 0 0 26px 0;
+    font-family: 'Inter';
 }
 
 .places__paragraph:last-of-type {
@@ -24,7 +25,7 @@
     }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 600px) {
     .places__paragraph {
         max-width: 288px;
         font-size: 16px;
