--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,6 +3,13 @@
     margin: 92px auto 92px;
 }
 
+@media screen and (max-width: 1120px) {
+    .places {
+        max-width: 928px;
+        margin: 92px auto 92px;
+    }
+}
+
 @media screen and (max-width: 960px) {
     .places {
         max-width: 720px;
@@ -10,7 +17,7 @@
     }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 600px) {
     .places {
         max-width: 320px;
         margin: 64px auto 66px;
