--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,14 +6,14 @@
     line-height: 28px;
     margin-right: 18px;
     text-decoration: none;
-    font-family: 'Inter';
+    font-family: Inter;
 }
 
 .header__lang-link:last-of-type {
     margin-right: 0;
 }
 
-.header__lang-link:focus {
+.header__lang-link:first-of-type {
     text-decoration: underline;
 }
 
