--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,7 +5,7 @@
     line-height: 163%;
     color: white;
     margin: 0 0 33px;
-    font-family: 'Inter';
+    font-family: Inter;
 }
 
 @media screen and (max-width: 540px) {
