--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,7 +5,7 @@
     line-height: 58px;
     color: white;
     margin: 0 0 40px;
-    font-family: 'Inter';
+    font-family: Inter;
 }
 
 @media screen and (max-width: 540px) {
