--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,12 +8,12 @@
     margin: 8px 0 0;
     letter-spacing: 1.5px;
     text-transform: uppercase;
-    font-family: 'Inter';
+    font-family: Inter;
 }
 
 @media screen and (max-width: 1120px) {
     .lead__caption {
-        margin: 8px 0 0 48px;
+        margin: 8px 0 0 28px;
     }
 }
 
