--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,27 +1,26 @@
 .lead__image {
-    max-width: 984px;
-    max-height: 615px;
+    width: 984px;
+    height: 615px;
     margin: 0 auto 0;
 }
 
 @media screen and (max-width: 1120px) {
     .lead__image {
-        max-width: 928px;
-        max-height: 580px;
-        margin: 0 48px 0;
+        width: 928px;
+        height: 580px;
     }
 }
 
 @media screen and (max-width: 960px) {
     .lead__image {
-        max-width: 768px;
-        max-height: 480px;
+        width: 768px;
+        height: 480px;
     }
 }
 
 @media screen and (max-width: 540px) {
     .lead__image {
-        max-width: 320px;
-        max-height: 200px;
+        width: 320px;
+        height: 200px;
     }
 }
