--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,7 +7,7 @@
     text-align: center;
     max-width: 720px;
     margin: 0 auto 32px;
-    font-family: 'Inter';
+    font-family: Inter;
 }
 
 @media screen and (max-width: 540px) {
