--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -3,7 +3,7 @@
     font-size: 18px;
     line-height: 22px;
     color: white;
-    font-family: 'Inter';
+    font-family: Inter;
 }
 
 .places__link:hover {
