--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,7 +6,7 @@
     max-width: 360px;
     text-align: center;
     margin: 0 auto 0;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }
 
 @media screen and (max-width: 540px) {
