--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,7 +4,7 @@
     font-size: 14px;
     line-height: 16px;
     text-align: right;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }
 
 @media screen and (max-width: 540px) {
