--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,7 +5,7 @@
     font-size: 16px;
     line-height: 18px;
     margin: 0 18px 0 0;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }
 
 .footer__link:hover {
