--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,15 +6,11 @@
     line-height: 28px;
     margin-right: 18px;
     text-decoration: none;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }
 
 .header__lang-link:last-of-type {
     margin-right: 0;
-}
-
-.header__lang-link:first-of-type {
-    text-decoration: underline;
 }
 
 .header__lang-link:hover {
