--- a/blocks/intro/__list-number/intro__list-number.css
+++ b/blocks/intro/__list-number/intro__list-number.css
@@ -5,5 +5,5 @@
     font-size: 12px;
     line-height: 18px;
     color: white;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }
