--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,7 +8,7 @@
     margin: 8px 0 0;
     letter-spacing: 1.5px;
     text-transform: uppercase;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }
 
 @media screen and (max-width: 1120px) {
