--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -13,7 +13,7 @@
 
 @media screen and (max-width: 960px) {
     .lead__image {
-        width: 768px;
+        width: 100%;
         height: 480px;
     }
 }
