--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -5,7 +5,7 @@
     color: white;
     max-width: 484px;
     margin: 0 0 26px 0;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }
 
 .places__paragraph:last-of-type {
