--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -6,7 +6,7 @@
     max-width: 460px;
     margin: 0 40px 48px 0;
     grid-area: title;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }
 
 @media screen and (max-width: 1120px) {
