--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -6,5 +6,5 @@
     letter-spacing: 2px;
     text-transform: uppercase;
     margin: 0 0 12px;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
 }  
